--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -13,7 +13,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Productivity Manager</title>
+    <title>Productivity Monitor</title>
   </head>
   <body>
     <div id="root"></div>
